@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -31,7 +31,6 @@ import java.util.Collections;
 import java.util.List;
 
 import jdk.vm.ci.common.JVMCIError;
-import jdk.vm.ci.common.NativeImageReinitialize;
 import jdk.vm.ci.meta.AnnotationData;
 import jdk.vm.ci.meta.Assumptions.AssumptionResult;
 import jdk.vm.ci.meta.JavaConstant;
@@ -46,7 +45,7 @@ import jdk.vm.ci.meta.ResolvedJavaType;
  */
 public final class HotSpotResolvedPrimitiveType extends HotSpotResolvedJavaType {
 
-    @NativeImageReinitialize static HotSpotResolvedPrimitiveType[] primitives;
+    static HotSpotResolvedPrimitiveType[] primitives;
 
     private JavaKind kind;
     HotSpotObjectConstantImpl mirror;
@@ -62,7 +61,13 @@ public final class HotSpotResolvedPrimitiveType extends HotSpotResolvedJavaType 
         this.kind = kind;
     }
 
-    static HotSpotResolvedPrimitiveType forKind(JavaKind kind) {
+    /**
+     * Returns a primitive type instance corresponding to the given {@link JavaKind}.
+     *
+     * @param kind the Java kind of the primitive type
+     * @return the primitive type instance for the given Java kind
+     */
+    public static HotSpotResolvedPrimitiveType forKind(JavaKind kind) {
         HotSpotResolvedPrimitiveType primitive = primitives[kind.getBasicType()];
         assert primitive != null : kind;
         return primitive;
@@ -85,7 +90,7 @@ public final class HotSpotResolvedPrimitiveType extends HotSpotResolvedJavaType 
     }
 
     @Override
-    HotSpotResolvedObjectTypeImpl getArrayType() {
+    protected HotSpotResolvedObjectType getArrayType() {
         if (kind == JavaKind.Void) {
             return null;
         }
@@ -298,6 +303,11 @@ public final class HotSpotResolvedPrimitiveType extends HotSpotResolvedJavaType 
     }
 
     @Override
+    public List<ResolvedJavaMethod> getAllMethods(boolean forceLink) {
+        return List.of();
+    }
+
+    @Override
     public ResolvedJavaMethod getClassInitializer() {
         return null;
     }
@@ -317,18 +327,21 @@ public final class HotSpotResolvedPrimitiveType extends HotSpotResolvedJavaType 
     }
 
     @Override
-    JavaConstant getJavaMirror() {
+    public JavaConstant getJavaMirror() {
         return mirror;
     }
 
     @Override
     public AnnotationData getAnnotationData(ResolvedJavaType type) {
+        checkIsAnnotation(type);
         return null;
     }
 
     @Override
     public List<AnnotationData> getAnnotationData(ResolvedJavaType type1, ResolvedJavaType type2, ResolvedJavaType... types) {
-        return Collections.emptyList();
+        checkIsAnnotation(type1);
+        checkIsAnnotation(type2);
+        checkAreAnnotations(types);
+        return List.of();
     }
-
 }
